--- a/tweet_emotion_detection.ipynb
+++ b/tweet_emotion_detection.ipynb
@@ -28,9 +28,9 @@
     "        return file.readlines()\n",
     "\n",
     "# Load datasets\n",
-    "train_file = \"C:/Users/Prakash/OneDrive/Desktop/Project/emotion/train.txt\"\n",
-    "val_file = \"C:/Users/Prakash/OneDrive/Desktop/Project/emotion/val.txt\"\n",
-    "test_file = \"C:/Users/Prakash/OneDrive/Desktop/Project/emotion/test.txt\"\n",
+    "train_file = \"path/to/train.txt\"\n",
+    "val_file = \"path/to/emotion/val.txt\"\n",
+    "test_file = \"path/to/test.txt\"\n",
     "train = load_data(train_file)\n",
     "val = load_data(val_file)\n",
     "test = load_data(test_file)"
